<resources>
    <string name="app_name">My Garden</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="guide_text_sign_up">Sign up and you can to log in from other
        devices
    </string>
    <string name="guide_text_add_plants">Add your real plants and follow them with this
        application
    </string>
    <string name="guide_text_turn_notification">Turn on notifications in the settings and you
        will know when to care for the plants
    </string>
    <string name="ok">OK</string>
    <string name="my_plants">My plants</string>
    <string name="addition_plant">Addition plant</string>
    <string name="name">Name</string>
    <string name="watering">Irrigation</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="period_in_days">Irrigation period in days</string>
    <string name="days">days</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enable_permissions_settings_appliction">Enable permissions for using this
        feature
    </string>
    <string name="change_plant_title">Change plant</string>
    <string name="delete_plant">Delete plant</string>
    <string name="do_you_really_want_to_delete_this_plant">Do you really want to delete this plant?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_email_and_password">Remember email and password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="settings">Settings</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
</resources>
