<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.ostrovec.mygarden.ui.sign.model.User" />

        <variable
            name="handler"
            type="com.ostrovec.mygarden.ui.sign.signin.SignInHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:paddingEnd="@dimen/medium_padding"
        android:paddingStart="@dimen/medium_padding"
        tools:context=".ui.sign.signin.SignInActivity">

        <TextView
            android:id="@+id/sign_in_title_text_view"
            style="@style/HeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_in_name_edit_text"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/medium_padding"
            android:layout_marginTop="@dimen/medium_padding"
            android:hint="@string/name"
            android:onTextChanged="@{handler::onNameChanged}"
            android:text="@={model.setName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_title_text_view" />

        <EditText
            android:id="@+id/sign_in_email_edit_text"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/medium_padding"
            android:layout_marginTop="@dimen/normal_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:onTextChanged="@{handler::onEmailChanged}"
            android:text="@={model.setEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_name_edit_text" />

        <TextView
            android:id="@+id/sign_in_sign_in_text_view"
            style="@style/BaseButton.SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_medium_padding"
            android:onClick="@{(view)->handler.onClickSignIn()}"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_email_edit_text" />

        <TextView
            android:id="@+id/sign_in_sign_up_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:onClick="@{(view)->handler.onClickSignUp()}"
            android:text="Don't have an account? Sign in"
            android:textColor="@color/colorEasternBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_sign_in_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>